--- a/dashboard/login.html
+++ b/dashboard/login.html
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                                <a href="./index.html"><button class="btn btn-primary d-grid w-100" type="submit">Sign in</button></a>
                             </div>
                         </form>
 
