--- a/dashboard/login.html
+++ b/dashboard/login.html
@@ -60,7 +60,7 @@
                         <h4 class="mb-2">Welcome to ai.Wallet! 👋</h4>
                         <p class="mb-4">Please sign-in to your account and start the adventure of savings</p>
 
-                        <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+                        <form id="formAuthentication" class="mb-3" action="./index.html" method="POST">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email or Username</label>
                                 <input type="email" required class="form-control" id="email" name="email-username"
