--- a/dashboard/login.html
+++ b/dashboard/login.html
@@ -60,7 +60,7 @@
                         <h4 class="mb-2">Welcome to ai.Wallet! 👋</h4>
                         <p class="mb-4">Please sign-in to your account and start the adventure of savings</p>
 
-                        <form id="formAuthentication" class="mb-3" action="https://allcodez.github.io/ai-Wallet/dashboard/index.html" method="POST">
+                        <form id="formAuthentication" class="mb-3" method="POST">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email or Username</label>
                                 <input type="email" required class="form-control" id="email" name="email-username"
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                                 <button class="btn btn-primary d-grid w-100" type="submit"><a href="./index.html" style="color: white !important;">Sign in</a></button>
                             </div>
                         </form>
 
