--- a/dashboard/admin.html
+++ b/dashboard/admin.html
@@ -62,7 +62,7 @@
                         <h4 class="mb-2 text-center">Your Saving adventure starts here</h4>
                         <p class="mb-4 text-center">Making it easy and fun to manage your Salary!</p>
 
-                        <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+                        <form id="formAuthentication" class="mb-3" method="POST">
                             <div class="d-flex justify-content-between">
                                 <label for="username" class="form-label">firstName</label>
                                 <label for="username" class="form-label ms-3">lastName</label>
@@ -131,7 +131,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <button class="btn btn-primary d-grid w-100">Sign up</button>
+                            <button class="btn btn-primary d-grid w-100" type="submit"><a href="./index.html" style="color: white !important;">Sign in</a></button>
                         </form>
 
                         <p class="text-center">
