--- a/dashboard/admin.html
+++ b/dashboard/admin.html
@@ -131,7 +131,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <button class="btn btn-primary d-grid w-100" type="submit"><a href="./index.html" style="color: white !important;">Sign in</a></button>
+                            <button class="btn btn-primary d-grid w-100" type="submit"><a href="./login.html" style="color: white !important;">Sign in</a></button>
                         </form>
 
                         <p class="text-center">
