--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								aria-label="Enter Your Email" required class="input-field" />
 
 							<button type="submit" class="btn btn-primary signup">
-								<a href="./index.html" style="color: white !important;">Sign Up</a>
+								<a href="./dashboard/index.html" style="color: white !important;">Sign Up</a>
 							</button>
 						</form>
 
